putting things together

--- a/docs/docs/index.mdx
+++ b/docs/docs/index.mdx
@@ -48,4 +48,4 @@ Check out the [Awesome Aztec repo](https://github.com/AztecProtocol/awesome-azte
 
 Clone the [Aztec Starter repo](https://github.com/AztecProtocol/aztec-starter) to get a minimal project set up with Sandbox (local developer network), a simple contract and a test suite.
 
-Jump into one of the [tutorials](tutorials/private_voting_contract.md) to learn how to build more complex applications on Aztec.
+Jump into one of the [tutorials](tutorials/private_voting_contract.mdx) to learn how to build more complex applications on Aztec.
