pushing to see if cgroup works in remote

--- a/docs/docs/tutorials/private_voting_contract.mdx
+++ b/docs/docs/tutorials/private_voting_contract.mdx
@@ -21,7 +21,9 @@ You can also click on this badge and start a codespace - a free remote server th
 Start a new project by using the very same `npx` command that powers the codespace:
 
 <span data-testid="0">
-  ```corepack enable && yes | npx aztec-app init -v zpedro/tutorials_refactor```
+  ```bash
+  yes | npx aztec-app init -v zpedro/tutorials_refactor
+  ```
 </span>
 
 ```bash
