--- a/docs/docs/tutorials/private_voting_contract.mdx
+++ b/docs/docs/tutorials/private_voting_contract.mdx
@@ -20,11 +20,15 @@ You can also click on this badge and start a codespace - a free remote server th
 
 Start a new project by using the very same `npx` command that powers the codespace:
 
+{/* <!-- prettier-ignore-start --> */}
+
 <span data-testid="0">
+    
   ```bash
-  yes | npx aztec-app init -v zpedro/tutorials_refactor
+    yes | npx aztec-app init -v zpedro/tutorials_refactor
   ```
 </span>
+{/* <!-- prettier-ignore-end --> */}
 
 ```bash
 yes | npx aztec-app init
@@ -101,9 +105,20 @@ console.log("Yey! Address: ", address);
 
 </span>
 
+<span
+  data-testid="5"
+  replaceLines="4"
+  file="index.ts"
+  style={{ display: "none" }}
+>
+  ```ts
+    const pxe = createPXEClient("http://aztec:8080")
+  ```
+</span>
+
 With the infra ready, all we need is <s>love</s> hit the button:
 
-<span data-testid="5" >
+<span data-testid="6" >
 
 ```bash
 yes | npx tsx index.ts
@@ -124,7 +139,7 @@ So I like tsx, which uses sensible defaults that "just work" 💡
 
 Ok ok let's dive in the actual voting logic. Let's have a look at our `main.nr`. There's not much in there, but there's an initializer that runs when you deploy it, and turns out we would like to have an admin for our little election. So we pass it as a parameter:
 
-<span data-testid="6" replaceLines="3,-1" file="src/main.nr">
+<span data-testid="7" replaceLines="3,-1" file="src/main.nr">
 
 ```rust
 #[aztec(public)]
@@ -140,7 +155,7 @@ fn constructor(admin: AztecAddress) {
 
 What's this storage thing? Well, that's something we need to define. Thankfully, there's a `#[aztec(storage)]` macro for that. Above our initializer, we can add our admin.
 
-<span data-testid="7" replaceLines="3,2" file="src/main.nr">
+<span data-testid="8" replaceLines="3,2" file="src/main.nr">
 
 ```rust
 #[aztec(storage)]
@@ -158,7 +173,7 @@ We also added another storage value `tally`, which is a map that relates a key (
 
 Here's all the code we have so far:
 
-<span data-testid="8" compare="true" file="src/main.nr">
+<span data-testid="9" compare="true" file="src/main.nr">
 
 ```rust
 contract Main {
@@ -264,7 +279,7 @@ We now need to add +1 to the person we chose to vote for. So we call a public fu
 
 Let's call our own contract with our current execution context, and enqueue our call. And that's it for this function. Feel free to copy it, you lazy goblin!
 
-<span data-testid="9" replaceLines="-1,-1" file="src/main.nr">
+<span data-testid="10" replaceLines="-1,-1" file="src/main.nr">
 
 ```rust
 #[aztec(private)]
@@ -284,7 +299,7 @@ fn cast_vote(candidate: Field) {
 
 The `add_to_tally_public` function is quite straightforward. It just reads and writes a public value from the `tally` [Map](../reference/smart_contract_reference/aztec-nr/aztec/state_vars/map#at):
 
-<span data-testid="10" replaceLines="-1,-1" file="src/main.nr">
+<span data-testid="11" replaceLines="-1,-1" file="src/main.nr">
 
 ```rust
 #[aztec(public)]
@@ -303,7 +318,7 @@ You can deploy now! Just make sure to add the address as a parameter to the `dep
 {/* <!-- prettier-ignore-start --> */}
 
 <span
-  data-testid="11"
+  data-testid="12"
   replaceLines="-1"
   file="index.ts"
   style={{ display: "none" }}
@@ -319,7 +334,7 @@ You can deploy now! Just make sure to add the address as a parameter to the `dep
 
 You also want to import some dependencies we're using, like `AztecAddress`. Make sure to do it _inside_ the `Contract` block:
 
-<span data-testid="12" replaceLines="2,3" file="src/main.nr">
+<span data-testid="13" replaceLines="2,3" file="src/main.nr">
 
 ```rust
 contract Main {
@@ -332,7 +347,7 @@ contract Main {
 
 Head to your terminal to recompile, generate the artifact, and run:
 
-<span data-testid="13">
+<span data-testid="14">
 
 ```bash
 aztec-nargo compile
